syntax="proto2";

package yamcs.protobuf.web;

option java_package = "org.yamcs.protobuf";
option java_outer_classname = "WebProto";
option java_multiple_files = true;

import "yamcs/protobuf/yamcs.proto";

/*
 * DEPRECATED - DO NOT USE
 */
 
message ParameterSubscriptionRequest {
  repeated NamedObjectId id = 1;
  //if set to true, an error message will be sent back if any parameter from the list above is invalid
  // by default is false
  optional bool abortOnInvalid = 2;

  // if set to true, send parameter updates when parameters expire.
  // the parameter will have the same value and timestamp like the previous sent one, but the acquisition status will be set to EXPIRED (instead of ACQUIRED)
  //by default is false
  optional bool updateOnExpiration = 3;

  //if set to true (default), send a first batch of the parameters from cache if available
  // otherwise just wait for the parameters to be updated
  optional bool sendFromCache = 4;

  //subcriptionId
  //  0 or not specified means to add parameters to the first subscription made
  //     this is for compatibility with the previous yamcs version before 4.1 
  //     when it was not possible to have multiple subscriptions   
  // -1 means to create a new subscription
  // >1 means to add parameters to the existing subcription with that id
  optional int32 subscriptionId = 5;
}

message ParameterSubscriptionResponse {
  repeated NamedObjectId invalid = 2;
  optional int32 subscriptionId = 3;
}
